feat: complete api coud banner and ticket
